@@ -1,5 +1,8 @@
 ##Text encoding: utf-8
 
+2015-01-14  Jean Bréfort  <jean.brefort@normalesup.org>
+	* plugins/paint/arrows/retrosynthesis.cc:
+
 2015-01-09  Jean Bréfort  <jean.brefort@normalesup.org>
 	* programs/3d/gchem3d.appdata.xml.in: fixed typos.
 	* programs/calc/gchemcalc.appdata.xml.in: ditto.
